--- a/Mindstorms_EV3/Mindstorms_EV3.csproj
+++ b/Mindstorms_EV3/Mindstorms_EV3.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HidApi.Net" Version="1.0.1" />
+    <PackageReference Include="LibUsbDotNet" Version="2.2.29" />
     <PackageReference Include="Mindstorms.EV3" Version="1.0.3" />
+    <PackageReference Include="MonoBrickCore" Version="1.0.1" />
     <PackageReference Include="System.IO.Ports" Version="8.0.0" />
   </ItemGroup>
 
